--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -306,8 +306,8 @@
       <li class="nav-item pl-md-1">
         <a *ngIf="isBrowser==true" class="nav-link s2bold" routerLink='/checkout' routerLinkActive="active">
           <h1 class="s2bold">
-              <i class="fas fa-shopping-cart" title="View Shopping Cart"></i>
-              Shopping Cart
+              <i class="fas fa-shopping-cart" title="View Shopping Cart"></i> 
+            Cart
           </h1>
         </a>
         <a *ngIf="isBrowser==false" class="nav-link s2bold" href='http://luxedreameventhire.co.nz/checkout'>
