--- a/src/app/fcomponents/shopping-checkout/shopping-cart/shopping-cart.component.html
+++ b/src/app/fcomponents/shopping-checkout/shopping-cart/shopping-cart.component.html
@@ -1,63 +1,68 @@
 <div class="row" *ngIf="prodsInCart.length!=0">
-  
-  <div class="mt-2 ml-2">
-    <input bsDatepicker type="text" [style.border-bottom]="borderStyleControl ? borderstyleA :borderstyleB" class="form-control text-line" placeholder="Start Date" style="width: 260px;"
-      [minDate]="minDate_start" [datesDisabled]="disabledDates" [maxDate]="maxDate_start"
-      [bsConfig]="{dateInputFormat: 'MMMM Do YYYY',containerClass:'theme-orange',showWeekNumbers:false}"
-      (bsValueChange)="onStartChange($event)">
-  </div>
-  <div class="mt-2 ml-2">
-    <input bsDatepicker type="text" [style.border-bottom]="borderStyleControl ? borderstyleA :borderstyleB" class="form-control text-line" placeholder="Return Date" style="width: 260px;"
-      [isDisabled]="dateReturnControl" [minDate]="minDate_return" [datesDisabled]="disabledDates"
-      [maxDate]="maxDate_return"
-      [bsConfig]="{dateInputFormat: 'MMMM Do YYYY',containerClass:'theme-orange',showWeekNumbers:false}"
-      (bsValueChange)="onReturnChange($event)">
-  </div>
+
+	<div class="my-2 ml-3">
+		<span>From </span>
+		<input bsDatepicker type="text" class="input_line" placeholder="Start Date" style="width: 260px;" 
+			[minDate]="minDate_start"
+			[datesDisabled]="disabledDates" [maxDate]="maxDate_start"
+			[bsConfig]="{dateInputFormat: 'MMMM Do YYYY',containerClass:'theme-orange',showWeekNumbers:false}"
+			(bsValueChange)="onStartChange($event)">
+		<span class="mx-3">to</span>
+		<input bsDatepicker type="text" class="input_line" placeholder="Return Date" style="width: 260px;"
+			[isDisabled]="dateReturnControl" [minDate]="minDate_return" [datesDisabled]="disabledDates"
+			[maxDate]="maxDate_return"
+			[bsConfig]="{dateInputFormat: 'MMMM Do YYYY',containerClass:'theme-orange',showWeekNumbers:false}"
+			(bsValueChange)="onReturnChange($event)">
+	</div>
 </div>
 <hr>
 <div class="row mb-3 productdiv" *ngFor="let prod of prodsInCart; index as i">
-  <div class="col-4 col-sm-4 col-md-4 col-lg-3" *ngIf="prod.url">
-    <img src="{{baseImageLink}}{{prod.url}}" class="cartProdHeight">
-  </div>
-  <div class="col-8 col-sm-8 col-md-8 col-lg-9">
-    <div class="divdetails"><span class="m2">{{prod.Title}}</span></div>
-    <div class="divdetails">Unit Price: ${{prod.Price/prod.Quantity}}</div>
+	<div class="col-4 col-sm-4 col-md-4 col-lg-3" *ngIf="prod.url">
+		<img src="{{baseImageLink}}{{prod.url}}" class="cartProdHeight">
+	</div>
+	<div class="col-8 col-sm-8 col-md-8 col-lg-9">
+		<div class="divdetails"><span class="m2">{{prod.Title}}</span></div>
+		<div class="divdetails">Unit Price: ${{prod.Price/prod.Quantity}}</div>
 
-    <div>
-      Amount: {{userInputQuantityArray[i]}}
-    </div>
-    <div>Start date: {{productTimetable[i].beginDate}}</div>
-    <div>Return date: {{productTimetable[i].endDate}}</div>
-    <div class="bg-gray divdetails"> NZ ${{prod.Price}}</div>
-    <div class="mt-2 divdetails">
-      <button class="btn btn-outline-blue" [routerLink]="[ '/product/', prod.ProdId ]">View Detail</button>
-      <button class="btn btn-outline-red" (click)="deleteCart(i)" style="float:right;">Delete</button>
-    </div>
-  </div>
+		<div>
+			Amount: {{userInputQuantityArray[i]}}
+		</div>
+		<div>Start date: {{productTimetable[i].beginDate}}</div>
+		<div>Return date: {{productTimetable[i].endDate}}</div>
+		<div class="bg-gray divdetails"> NZ ${{prod.Price}}</div>
+		<div class="mt-2 divdetails">
+			<button class="btn btn-outline-blue" [routerLink]="[ '/product/', prod.ProdId ]">View Detail</button>
+			<button class="btn btn-outline-red" (click)="deleteCart(i)" style="float:right;">Delete</button>
+		</div>
+	</div>
 </div>
 
 <div *ngIf="prodsInCart.length==0">
-  <br>
-  <br>
-  <span class="s2">You don't have anything in your shopping cart yet!</span> <br>
-  <button class="btn btn-outline-gold mt-3" routerLink="/hire">View Our Products</button>
-  <br>
-  <br>
+	<br>
+	<br>
+	<span class="s2">You don't have anything in your shopping cart yet!</span> <br>
+	<button class="btn btn-outline-gold mt-3" routerLink="/hire">View Our Products</button>
+	<br>
+	<br>
 </div>
-<div class="mb-2" *ngIf="!isShoppingCartValid && prodsInCart.length!=0" style="color:red;font-size:large">{{errorMessage}}</div>
+<div class="mb-2" *ngIf="!isShoppingCartValid && prodsInCart.length!=0" style="color:red;font-size:large">
+	{{errorMessage}}</div>
 <div class="text-right" *ngIf="totalPrice!=0 &&isShoppingCartValid">
-  <div class="mb-1">Rental Deposit <span style="color:red">Due Now</span>: NZ $<span class="s2bold">{{depositFeeDue}}</span></div>
-  <div class="mb-1">Rental Due at Delivery or Pick-up: NZ $<span class="s2bold">{{depositFeeDue}}</span></div>
-  <div class="mb-1">Bond Due at Delivery or Pick-up: NZ $<span class="s2bold">{{bondFee}}</span></div>
-  <div class="mb-1" *ngIf="deliveryControl">Delivery Fee <span style="color:red">Due now</span>: NZ $<span class="s2bold">{{deliveryFee}}</span></div>
-  <div class="mb-1">Total Rent Fee: NZ $<span class="s2bold">{{totalPrice}}</span></div>
-  <div class="mb-1">Total Amount <span style="color:red">Due Now</span>: NZ $<span class="s2bold">{{amountDue}}</span></div>
-  <div class="mb-1" style="font-size:x-small;">(15% GST Included)</div>
+	<div class="mb-1">Rental Deposit <span style="color:red">Due Now</span>: NZ $<span
+			class="s2bold">{{depositFeeDue}}</span></div>
+	<div class="mb-1">Rental Due at Delivery or Pick-up: NZ $<span class="s2bold">{{depositFeeDue}}</span></div>
+	<div class="mb-1">Bond Due at Delivery or Pick-up: NZ $<span class="s2bold">{{bondFee}}</span></div>
+	<div class="mb-1" *ngIf="deliveryControl">Delivery Fee <span style="color:red">Due now</span>: NZ $<span
+			class="s2bold">{{deliveryFee}}</span></div>
+	<div class="mb-1">Total Rent Fee: NZ $<span class="s2bold">{{totalPrice}}</span></div>
+	<div class="mb-1">Total Amount <span style="color:red">Due Now</span>: NZ $<span class="s2bold">{{amountDue}}</span>
+	</div>
+	<div class="mb-1" style="font-size:x-small;">(15% GST Included)</div>
 </div>
 
 <div class="justify-content-end mb-3" *ngIf="prodsInCart.length!=0">
-  <button class="btn btn_gold btn-sm" routerLink="/" type="button">
-    <i class="fas fa-arrow-left"></i>&nbsp;Continue Shopping
-  </button>
+	<button class="btn btn_gold btn-sm" routerLink="/" type="button">
+		<i class="fas fa-arrow-left"></i>&nbsp;Continue Shopping
+	</button>
 </div>
 <br><br>
