--- a/src/app/fcomponents/payment-result/payment-result.component.html
+++ b/src/app/fcomponents/payment-result/payment-result.component.html
@@ -2,8 +2,12 @@
 
 
 
-
-  <div *ngIf="result" class="card">
+  <div *ngIf="isSendingRequest">We are processing your Order Status. Please wait...
+    <div class="spinner-border text-info" role="status">
+       <span class="sr-only">Loading...</span>
+    </div>
+ </div>
+  <div *ngIf="isSendSuccess && result" class="card">
     <div class="card-header">
       <h4>Your Payment Status</h4>
     </div>
@@ -15,16 +19,23 @@
       </div>
     </div>
   </div>
-  <div *ngIf="!result" class="card">
+  <div *ngIf="isSendSuccess && !result" class="card">
     <div class="card-header">
       <h4>Your Payment Status</h4>
     </div>
     <div class="card-body bg-light text-center text-danger">
       {{paymentStatusFailure}}
-
-      <div id="buttonsWrap">
-        <button mat-raised-button routerLink='/paymentoptions'>Pay Again</button>
+      
+      <div *ngIf="!expired" id="buttonsWrap">
+        <i class="fas fa-arrow-right"></i><button mat-raised-button (click)="payAgain()">Pay Again</button>
       </div>
+      <div *ngIf="user&&!expired" id="buttonsWrap">
+        <i class="fas fa-arrow-right"></i><button mat-raised-button routerLink='/userDashboard'>Check the order in your dashboard </button>
+      </div>
+      <div *ngIf="expired" class="alert alert-danger text-center">
+        {{ errorMessage }}
+      </div>
+  
     </div>
   </div>
 
