--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -69,9 +69,7 @@
     </div>
     <!-- copyright -->
     <div class=" ">
-      <div class="s2gold text-center ">&copy; Luxe Dream Event Hire 2019 
-		  <span class="s2 text-center ml-2">Built by Spiritx</span>
-	  </div>
+      <div class="s2gold text-center ">&copy; Luxe Dream Event Hire 2019 </div>
+	  <div class="s2 text-center ml-2">Built by Spiritx</div>
     </div>
-
   </div>
