--- a/src/app/fcomponents/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/fcomponents/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,56 +1,59 @@
 <div style="text-align:center;padding-top:4%;">
-    <h1>Welcome to Dashboard</h1><br>
-    <hr><br>
-    <!-- Edit productCategory -->
-    
-    <div class="row justify-content-center">
-      <h2 class="col-3">Edit Categories </h2>
-      <div class="dropdown col-3">
-        <span class="btn btn-secondary dropdown-toggle" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Specify the product type
-        </span>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-          <a class="dropdown-item" *ngFor="let type of displayedTypeData" (click)="loadCategory(type.prodTypeId)">
-            {{type.typeName}}
-          </a>
-        </div>
-      </div>
-    </div>
-    
-    <br><br>
-    <div class="row justify-content-center">
-      <div class="col-6" *ngIf="selectedType">
-        <h3>{{selectedType['0'].typeName}}</h3>
-          <form [formGroup]="categoryForm">
-              <div formArrayName="categoryItems">
-                  <div *ngFor="let cate of categoryForm.controls.categoryItems.controls, index as i">
-                      <div [formGroupName]="i">
-                      <input class="col-6" type="text" formControlName="categoryName" placeholder="Category name">
-                      <i class="fas fa-trash-alt col-1 text-center" (click)="deleteCate(cate,i)"></i>
-                      </div>
-                  </div>
-              </div>
-          </form>
-          <!-- category is loading... -->
-          <div *ngIf="isLoadingCategory">
-            Loading categories...
-              <div class="spinner-border text-info" role="status">
-                  <span class="sr-only">Loading...</span>
-              </div>    
-          </div>
+	<h2>Admin Dashboard</h2><br>
+	<hr><br>
 
-          <div class="mt-4">            
-            <button type="button" class="btn btn-outline-secondary btn-sm" (click)="addCategory()" [disabled] = "isLoadingCategory == true">Add new category</button>
-            <button class="btn btn-outline-secondary btn-sm ml-5" (click)="updateCategory()" [disabled] = "isLoadingCategory == true">Save changes</button>
-          </div>
-         <div>{{feedbackMessage}}</div>
-      </div>
+	<div class="row justify-content-center">
+		<h3 class="col-4">Edit Navbar Categories</h3>
+		<div class="dropdown col-3">
+			<span class="btn btn-secondary dropdown-toggle" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				Select Product Type
+			</span>
+			<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+				<a class="dropdown-item" *ngFor="let type of displayedTypeData" (click)="loadCategory(type.prodTypeId)">
+					{{type.typeName}}
+				</a>
+			</div>
+		</div>
+	</div>
 
+	<br>
+	<div class="row justify-content-center">
+		<div class="col-8" *ngIf="selectedType">
+			<h3>{{selectedType['0'].typeName}}</h3>
+			<div *ngIf="!selectedType['0']['productCategory']['0']">
+				<h5 style="color: #c48f45;">Error - No Item Found !</h5>
+			</div>
+			<form [formGroup]="categoryForm">
+				<div formArrayName="categoryItems">
+					<div *ngFor="let cate of categoryForm.controls.categoryItems.controls, index as i">
+						<div [formGroupName]="i">
+							<input class="col-6" type="text" formControlName="categoryName" placeholder="Category name">
+							<i class="fas fa-trash-alt col-1 text-center" (click)="deleteCate(cate,i)"></i>
+						</div>
+					</div>
+				</div>
+			</form>
+			<!-- category is loading... -->
+			<div *ngIf="isLoadingCategory">
+				Loading categories...
+				<div class="spinner-border text-info" role="status">
+					<span class="sr-only">Loading...</span>
+				</div>
+			</div>
 
-      <!-- <div *ngIf="selectedType">
+			<div class="row justify-content-center mt-4">
+				<button type="button" class="btn btn-outline-secondary btn-sm" (click)="addCategory()"
+					[disabled]="isLoadingCategory == true">Add new category</button>
+				<button class="btn btn-outline-secondary btn-sm ml-3" (click)="updateCategory()"
+					[disabled]="isLoadingCategory == true">Save changes</button>
+				<button type="button" class="btn btn-secondary btn-sm ml-3" (click)="reload()">Cancel</button>
+			</div>
+			<div>{{feedbackMessage}}</div>
+		</div>
+
+		<!-- <div *ngIf="selectedType">
         <div *ngFor="let cate of selectedType['0'].productCategory">{{cate.categoryName}}</div>
       </div> -->
 
-    </div><br><br>
-    </div>
-    
+	</div><br><br>
+</div>
