--- a/src/app/fcomponents/admin/admin.component.html
+++ b/src/app/fcomponents/admin/admin.component.html
@@ -1,55 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <!-- !sidebar -->
-    <!-- <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-      <div class="sidebar-sticky">
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link active" id="1" (click)="changeBoard($event)">
-              <i class="fas fa-user-cog"></i>
-              Dashboard <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="2" (click)="changeBoard($event)">
-              <i class="fas fa-shopping-bag"></i>
-              Hires
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="3" (click)="changeBoard($event)">
-              <i class="fas fa-gift"></i>
-              Services
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="4" (click)="changeBoard($event)">
-              <i class="fas fa-briefcase"></i>
-              Packages
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="5" (click)="changeBoard($event)">
-              <i class="fas fa-folder-open"></i>
-              Gallery
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="6" (click)="changeBoard($event)">
-              <i class="far fa-question-circle"></i>
-              Faq
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="7" (click)="changeBoard($event)">
-              <i class="fas fa-shipping-fast"></i>
-              Carts
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav> -->
-    <div class="col-md-2 d-none d-md-block bg-light sidebar">
+    <div class="col-md-2 d-none d-md-block bg-light sidebar py-5">
       <app-admin-sideBar></app-admin-sideBar>
     </div>
 
@@ -57,274 +9,6 @@
       
         <router-outlet></router-outlet>
 
-      <!-- loading -->
-      <!-- <div class="text-center mt-5 pt-5" *ngIf="isLoading">
-        <app-loading></app-loading>
-      </div> -->
-
-      <!-- !Dashboard -->
-      <!-- <div *ngIf="blockCode == '1'" style="text-align:center;padding-top:4%;">
-      <h1>Welcome to Dashboard</h1><br>
-      <hr><br>
-
-      <div class="row ">
-        <div class="col-6">
-          <h2>Edit Categories </h2>
-            <form [formGroup]="categoryForm">
-                <div formArrayName="categoryItems">
-                    <div *ngFor="let cate of categoryForm.controls.categoryItems.controls, index as i">
-                        <div [formGroupName]="i">
-                        <input class="col-6" type="text" formControlName="categoryName" placeholder="Category name">
-                        <i class="fas fa-trash-alt col-1 text-center" (click)="deleteCate(cate,i)"></i>
-                        </div>
-                    </div>
-                </div>
-            </form>
-
-            <div *ngIf="isLoadingCategory">
-              Loading categories...
-                <div class="spinner-border text-info" role="status">
-                    <span class="sr-only">Loading...</span>
-                </div>    
-            </div>
-
-            <div class="mt-4">            
-              <button type="button" class="btn btn-outline-secondary btn-sm" (click)="addCategory()" [disabled] = "isLoadingCategory == true">Add new category</button>
-              <button class="btn btn-outline-secondary btn-sm ml-5" (click)="updateCategory()" [disabled] = "isLoadingCategory == true">Save changes</button>
-            </div>
-           <div>{{feedbackMessage}}</div>
-        </div>
-      </div><br><br>
-      </div>
-       -->
-
-      <!-- !Hire || Service || Package-->
-      <!-- <div *ngIf="blockCode == '2' || blockCode == '3' || blockCode == '4'">
-        <div class="row mt-3">
-          <div class="col-1" *ngIf="blockCode == 2">
-            <h2>Hires</h2>
-          </div>
-          <div class="col-2" *ngIf="blockCode == 3">
-            <h2>Services</h2>
-          </div>
-          <div class="col-2" *ngIf="blockCode == 4">
-            <h2>Packages</h2>
-          </div>
-          <div class="pt-2 col">
-            <button type="button" class="ml-2" style="border-radius: 5px;" title="Add" (click)="createProduct()">
-              <i class="fas fa-plus"></i>
-              Add
-            </button>
-          </div>
-        </div>
-        <table class="table">
-          <thead>
-            <tr class="table-secondary">
-              <th scope="col">Id<br><span>编号</span></th>
-              <th scope="col">Title<br><span>标题</span></th>
-              <th scope="col">Subtitle<br><span>副标题</span></th>
-              <th scope="col" >Price<br><span>价格</span></th>
-              <th scope="col" >Discount<br><span>折后价</span></th>
-              <th scope="col" *ngIf="blockCode == 2" >Category<br><span>类别</span></th>
-              <th scope="col" >Total stock<br><span>总库存</span></th>
-              <th scope="col" >Available stock<br><span>现库存</span></th>
-              <th scope="col" >Special Order<br><span>特殊展示</span></th>
-              <th scope="col" >Description<br><span>描述</span></th>
-              <th scope="col" >Edit<br><span>编辑</span></th>
-              <th scope="col" >Delete<br><span>删除</span></th>
-            </tr>
-          </thead>
-          <tbody *ngIf="displayData">
-            <tr *ngFor="let data of displayData">
-              <td>{{data.prodId}}</td>
-              <td>{{data.title}}</td>
-              <td style="text-align:center;">{{data.subTitle}}</td>
-              <td style="text-align:center;">${{data.price}}</td>
-              <td style="text-align:center;">${{data.price - data.discount}}</td>
-              <td *ngIf="blockCode == 2" style="text-align:center;">
-                <div *ngIf="data.category">{{data.category.categoryName}}</div>
-              </td>
-              <td >{{data.totalStock}}</td>
-              <td>{{data.availableStock}}</td>
-              <td>{{data.specialOrder}}</td>
-
-              <td style="text-align:center; font-size:10px;">{{data.description}}</td>
-              <td ><i class="far fa-edit" (click)="openProduct(data)" title="Edit"></i></td>
-              <td ><i class="far fa-trash-alt" title="Delete"
-                  (click)="deleteProduct(data)"></i></td>
-            </tr>
-          </tbody>
-        </table>
-      </div> -->
-
-      <!-- !Gallery -->
-      <!-- <div *ngIf="blockCode == '5'">
-        <div class="row mt-3">
-          <div class="col-1">
-            <h2>Gallery</h2>
-          </div>
-          <div class="pt-2 col">
-              <button type="button" class="ml-2" style="border-radius: 5px;" title="Add" (click)="createGallery()">
-                <i class="fas fa-plus"></i>
-                <span>Add</span>
-              </button>
-            </div>
-        </div>
-
-        <div class="accordion mb-4" id="accordionExample">
-          <div class="card eventTypeImageToggle">
-            <div class = "pt-3" id="headingOne">
-                <button class="btn dropdown-toggle eventTypeImageToggle pl-0" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                  <b>Edit images of event types</b>
-                </button>
-            </div>
-        
-            <div id="collapseOne" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordionExample">
-              <div class="card-body">
-                <div *ngIf="allEventTypes" class="eventTypeImageEditor">
-                  <div *ngFor="let event of allEventTypes" class="eventTypeImageEditorBlocks pt-2">
-                    <span class="s2">{{event.eventName}}</span><br>
-                    <img *ngIf="event.eventName" src="{{baseImageLink}}{{event.eventTypeImage}}" class="eventTypeImage mr-2">
-                    <input #eventImageInput type="file" (change)="onEventTypeImageSelected($event)" class="eventTypeImageEditorTools">
-                    <button type="button" class="btn btn-outline-info btn-sm eventTypeImageEditorTools" (click)="onUploadEventTypeImage(event)" [disabled] = "isLoading">upload</button>
-                  </div>
-                </div>              
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <table class="table">
-          <thead>
-            <tr class="table-secondary">
-              <th scope="col">Id<br><span>编号</span></th>
-              <th scope="col">Customer<br><span>顾客</span></th>
-              <th scope="col">Event Type<br><span> 活动类别</span></th>
-              <th scope="col">Description<br><span>描述</span></th>
-              <th scope="col">Edit<br><span>编辑</span></th>
-              <th scope="col">Delete<br><span>删除</span></th>
-            </tr>
-          </thead>
-          <tbody *ngIf="displayData">
-            <tr *ngFor="let data of displayData">
-              <td>{{data.prodjectId}}</td>
-              <td>{{data.customerName}}</td>
-              <td *ngIf="data.eventtype">{{data.eventtype.eventName}}</td>
-              <td>{{data.description}}</td>
-              <td><i class="far fa-edit" (click)="openGallery(data)" title="Edit"></i></td>
-              <td><i class="far fa-trash-alt" title="Delete" (click)="deleteGallery(data)"></i></td>
-            </tr>
-          </tbody>
-        </table>
-      </div> -->
-
-      <!-- !Faq -->
-      <!-- <div *ngIf="blockCode == '6'">
-        <div class="row mt-3">
-          <div class="col-1">
-            <h2>Faq</h2>
-          </div>
-          <div class="pt-2 col">
-              <button type="button" class="ml-2" style="border-radius: 5px;" title="Add" (click)="createFaq()">
-                <i class="fas fa-plus"></i>
-                <span>Add</span>
-              </button>
-            </div>
-        </div>
-
-        <table class="table">
-          <thead>
-            <tr class="table-secondary">
-              <th scope="col">Id<br><span>编号</span></th>
-              <th scope="col">Question<br><span>问题</span></th>
-              <th scope="col">Answer<br><span>回答</span></th>
-              <th scope="col">Edit<br><span>编辑</span></th>
-              <th scope="col">Delete<br><span>删除</span></th>
-            </tr>
-          </thead>
-          <tbody *ngIf="displayData">
-            <tr *ngFor="let data of displayData">
-              <td>{{data.id}}</td>
-              <td>{{data.question}}</td>
-              <td>{{data.answer}}</td>
-              <td><i class="far fa-edit" (click)="openFaq(data)" title="Edit"></i></td>
-              <td><i class="far fa-trash-alt" title="Delete" (click)="deleteFaq(data)"></i></td>
-            </tr>
-          </tbody>
-        </table>
-      </div> -->
-
-      <!-- !Cart -->
-      <!-- <div *ngIf="blockCode == '7'">
-        <div class="mt-3">
-          <h2>Carts</h2>
-        </div>
-        <table class="table">
-          <thead>
-            <tr class="table-secondary">
-              <th scope="col">Id<br><span>编号</span></th>
-              <th scope="col">Detail<br><span>详情</span></th>
-              <th scope="col">Contact<br><span>顾客信息</span></th>
-              <th scope="col">Price<br><span>价格</span></th>
-              <th scope="col">Location<br><span>活动地点</span></th>
-              <th scope="col">CreateTime<br><span>创建时间</span></th>
-              <th scope="col">EventDate<br><span>活动日期</span></th>
-              <th scope="col">UpdateTime<br><span>修改时间</span></th>
-              <th scope="col">Delete<br><span>删除</span></th>
-            </tr>
-          </thead>
-          <tbody *ngIf="displayData">
-            <tr *ngFor="let data of displayData">
-              <td>{{data.cartId}}</td> -->
-              <!--CartProds-->
-              <!-- <td>
-                <div class="dropdown">
-                  <button class="btn btn-secondary" type="button" (click)="openCart(data)">
-                    View Detail
-                  </button> -->
-                  <!-- <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" *ngIf="data.cartProd">
-                    <div *ngFor="let cart of data.cartProd">
-                      <div class="dropdown-item">
-                        <b>{{cart.title}}</b> |
-                        <b>${{cart.price}}</b> |
-                        Qty:<b>{{cart.quantity}}</b>
-                      </div>
-                    </div>
-                    <a class="dropdown-item" *ngIf="data.cartProd.length==0">Empty</a>
-                  </div> -->
-                <!-- </div>
-              </td> -->
-              <!--End CartProds-->
-              <!--Contact-->
-              <!-- <td>
-                <div class="dropdown">
-                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    View Contact
-                  </button>
-                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <div class="dropdown-item" *ngIf="data.contact">
-                      Firstname: <b>{{data.contact.firstName}}</b><br>
-                      Lastname: <b>{{data.contact.lastName}}</b><br>
-                      Mob: <b>{{data.contact.phoneNum}}</b><br>
-                      Email: <b>{{data.contact.email}}</b>
-                    </div>
-                  </div>
-                </div>
-              </td> -->
-              <!--End Contact-->
-              <!-- <td>${{data.price}}</td>
-              <td>{{data.location}}</td>
-              <td style="font-size:10px;">{{data.createOn | date:'mediumDate'}}</td>
-              <td style="font-size:10px;">{{data.plannedTime | date:'short'}}</td>
-              <td style="font-size:10px;">{{data.updateOn | date:'mediumDate'}}</td> -->
-              <!-- <td><i class="far fa-edit" (click)="openCart(data)" title="Edit"></i></td> -->
-              <!-- <td ><i class="far fa-trash-alt" title="Delete" (click)="deleteCart(data)"></i></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div> -->
     </main>
   </div>
 </div>
